src/objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Sprint_End_Date__c</fullName>
        <label>Sprint End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sprint_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_Start_Date__c</fullName>
        <label>Sprint Start Date</label>
        <type>Date</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sprint_End_Date__c</columns>
        <columns>Sprint_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sprint</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>